# Schedugoose

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  schedugoose-README.md
agent/: __init__.py  advisory.py  audit.py  career.py  config_schema.py  converse.py  course_qa.py  graph.py  intake.py  intent_schema.py  llm.py  plan_qa.py  planner.py  requirements_qa.py  revision.py  semantic.py  state.py  term_pipeline.py  understand.py
app/: __init__.py  main.py  metrics.py  routes.py  sessions.py
data/: __init__.py  cache.py  calendar.py  chunking.py  course_codes.py  course_utils.py  degree_plans.py  degree_requirements.py  electives.py  embeddings.py  etl.py  feedback.py  knowledge_base.py  kuali.py  mock_data.py  prefilter.py  prereqs.py  program_reqs.py  program_templates.py  quest_schedule.py  rag_store.py  requirements_compiler.py  requirements_rag.py  restrictions.py  sequences.py  suggested_sequences.py  term_codes.py  transcript.py  uw_api.py  vector_store.py
eval/: __init__.py  checker.py  judge.py  run_eval.py  test_cases.jsonl
scheduler/: __init__.py  conflicts.py  model.py  solve.py  types.py
scripts/: e2e_user_flow.py  etl_courses.py  export_sft.py
tests/: conftest.py  test_advisory.py  test_audit.py  test_career_prereqs.py  test_config_schema.py  test_converse.py  test_course_lookup.py  test_course_qa.py  test_degree_requirements.py  test_elective_inference.py  test_finished_features.py  test_genai_infra.py  test_plan_qa.py  test_prereq_groups.py  test_prereqs.py  (+16 more)
(+9 files in other folders)
